--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       context: .
       dockerfile: Dockerfile.frontend
       args:
-        VITE_API_BASE: ${VITE_API_BASE:-http://localhost:9000}
+        # In production on Coolify, set VITE_API_BASE to your backend's public URL, e.g. https://backend.tanishbhandari.name
+        VITE_API_BASE: ${VITE_API_BASE:-/api}
     ports:
       - "5173:80"
     depends_on:
