again changed ports

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -3,22 +3,22 @@ FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim AS base
 
 WORKDIR /app
 RUN apt-get update && apt-get install -y --no-install-recommends \
-		git ca-certificates curl gnupg \
-		&& mkdir -p -m 755 /etc/apt/keyrings \
-		&& curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg \
-			| dd of=/etc/apt/keyrings/githubcli-archive-keyring.gpg \
-		&& chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg \
-		&& echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" \
-			| tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-		&& apt-get update \
-		&& apt-get install -y --no-install-recommends gh \
-		&& rm -rf /var/lib/apt/lists/*
+        git ca-certificates curl gnupg \
+        && mkdir -p -m 755 /etc/apt/keyrings \
+        && curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg \
+            | dd of=/etc/apt/keyrings/githubcli-archive-keyring.gpg \
+        && chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg \
+        && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" \
+            | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+        && apt-get update \
+        && apt-get install -y --no-install-recommends gh \
+        && rm -rf /var/lib/apt/lists/*
 COPY pyproject.toml ./
 COPY README.md ./
 RUN uv sync --no-dev
 
 COPY backend ./backend
 
-ENV PORT=8000
-EXPOSE 8000
-CMD ["uv", "run", "backend/main.py", "--serve"]
+ENV PORT=9000
+EXPOSE 9000
+CMD ["uv", "run", "backend/main.py", "--serve", "--port", "9000"]
