--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,54 @@
-# Backend configuration
-DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/code_reviewer
+######################################
+# Backend configuration (FastAPI)
+######################################
+# SQLAlchemy connection string. In Docker Compose, the host is 'db'.
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@db:5432/code_reviewer
+
+# Service port the FastAPI app binds to
+PORT=9000
+
+# CORS configuration
+# Comma-separated origins (e.g., https://review.tanishbhandari.name)
+CORS_ORIGINS=*
+# Set to true only if using cookie-based auth across origins
+CORS_ALLOW_CREDENTIALS=false
+
+# GitHub access for cloning/pushing and PR creation
+GITHUB_TOKEN=
+
+# AI provider configuration
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-5
-GITHUB_TOKEN=
-PORT=8000
+AI_PROVIDER=heuristic
+
+# Review behavior
+DEFAULT_REVIEW_MODE=full   # full | recent | smart
+MAX_FILES_REVIEW=50
+
+# Repository cloning directory inside container
+REPO_CLONE_DIR=/clonedrepos
+
+# Optional git identity for commits (fallbacks provided if unset)
+GIT_USER_NAME=Code Reviewer Bot
+GIT_USER_EMAIL=code-reviewer-bot@local
+
+# Database init retry behavior (when DB is slow to start)
+DB_INIT_RETRIES=15
+DB_INIT_DELAY=2.0
+
+######################################
+# Docker Compose (optional/local)
+######################################
+# If you run the bundled Postgres service locally via docker compose,
+# you can override these values here.
+POSTGRES_DB=code_reviewer
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
+######################################
+# Frontend build (set as build arg in Coolify/CI)
+######################################
+# VITE_API_BASE is a build-time variable for the React app. Set in your
+# deployment platform's build args (not read from this .env at runtime).
+# Example:
+# VITE_API_BASE=https://backend.tanishbhandari.name
